--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -3,11 +3,11 @@ plugins {
 }
 
 android {
-    namespace 'com.example.sim23_android'
+    namespace 'com.example.pd014_android'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.sim23_android"
+        applicationId "com.example.pd014_android"
         minSdk 24
         targetSdk 33
         versionCode 1
@@ -30,10 +30,15 @@ android {
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    // https://mvnrepository.com/artifact/com.github.bumptech.glide/glide
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
+    // https://mvnrepository.com/artifact/com.github.bumptech.glide/compiler
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
 }
