--- a/Android/settings.gradle
+++ b/Android/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "Sim23_android"
+rootProject.name = "pd014_android"
 include ':app'
