--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
             android:name=".category.CategoryCreateActivity"
             android:exported="false" />
         <activity
+            android:name=".ChangeImageActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
