--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.Pd014_android"
         tools:targetApi="31">
         <activity
+            android:name=".account.RegisterActivity"
+            android:exported="false" />
+        <activity
             android:name=".category.CategoryCreateActivity"
             android:exported="false" />
         <activity
